Edited wiki page LoginSubmitCFM through web user interface.

--- a/wiki/LoginSubmitCFM.wiki
+++ b/wiki/LoginSubmitCFM.wiki
@@ -5,10 +5,14 @@
 
 This page processes traditional form-based logins.
 
-= Submitted From =
+= Tracking and Dependencies =
 
+== Submitted From ==
+
+{{{
 /authentication/components/NewLogin.cfm
+}}}
 
-= JavaScript Dependencies =
+== JavaScript Dependencies ==
 
 N/A
